alteração do nome

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página do Celso</title>
+    <title>Celso Matias</title>
     <link rel="stylesheet" href="./build/styles/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,7 +14,7 @@
         <header>
             <img class="profile-avatar" src="./src/images/fotocelso.jpeg"/>
             <div class="profile-bio">
-                <h1 class="profile-bio-name">Página do Celso</h1>
+                <h1 class="profile-bio-name">Celso Matias</h1>
                 <h2 class="profile-bio-subtitle">Desenvolvedor Front-end</h2>
                 <p class="profile-bio-description">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, voluptatibus consectetur magni eligendi iusto itaque velit officiis error pariatur cum optio rerum perferendis ducimus, veritatis dolorem deleniti, officia cupiditate! Nulla.
